--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
         "psr-4": { "Mapado\\RestClientSdkBundle\\": "src/" }
     },
     "require": {
-        "symfony/http-kernel": "^2.7",
-        "symfony/config": "^2.7",
-        "symfony/dependency-injection": "^2.7",
+        "symfony/http-kernel": "^2.7|^3.0",
+        "symfony/config": "^2.7|^3.0",
+        "symfony/dependency-injection": "^2.7|^3.0",
         "mapado/rest-client-sdk": "^0.17.0"
     },
     "require-dev": {
