force rest-client-sdk version to ~0.22

--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
         "psr-4": { "Mapado\\RestClientSdkBundle\\": "src/" }
     },
     "require": {
-        "symfony/http-kernel": "^2.7|^3.0",
-        "symfony/config": "^2.7|^3.0",
-        "symfony/dependency-injection": "^2.7|^3.0",
-        "mapado/rest-client-sdk": "0.*"
+        "symfony/http-kernel": "^2.7 || ^3.0",
+        "symfony/config": "^2.7 || ^3.0",
+        "symfony/dependency-injection": "^2.7 || ^3.0",
+        "mapado/rest-client-sdk": "~0.22"
     },
     "require-dev": {
         "atoum/atoum": "@stable",
