--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
         "psr-4": { "Mapado\\RestClientSdkBundle\\": "src/" }
     },
     "require": {
-        "symfony/http-kernel": "^2.7 || ^3.0",
-        "symfony/config": "^2.7 || ^3.0",
-        "symfony/dependency-injection": "^2.7 || ^3.0",
+        "symfony/http-kernel": "^2.7 || ^3.0 || ^4.0",
+        "symfony/config": "^2.7 || ^3.0 || ^4.0",
+        "symfony/dependency-injection": "^2.7 || ^3.0 || ^4.0",
         "mapado/rest-client-sdk": "^0.25.1 || ^0.26.0 || ^0.27 || ^0.28"
     },
     "require-dev": {
