set type as symfony-bundle to make recipe pass tests

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "mapado/rest-client-sdk-bundle",
     "description": "Rest Client SDK Bundle for hydra API",
+    "type": "symfony-bundle",
     "autoload": {
         "psr-4": { "Mapado\\RestClientSdkBundle\\": "src/" }
     },
