--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "symfony/http-kernel": "^2.7 || ^3.0 || ^4.0",
         "symfony/config": "^2.7 || ^3.0 || ^4.0",
         "symfony/dependency-injection": "^2.7 || ^3.0 || ^4.0",
-        "mapado/rest-client-sdk": "^0.25.1 || ^0.26.0 || ^0.27 || ^0.28 || ^0.29"
+        "mapado/rest-client-sdk": "^0.30"
     },
     "require-dev": {
         "atoum/atoum": "@stable",
