--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
         "psr-4": { "Mapado\\RestClientSdkBundle\\": "src/" }
     },
     "require": {
-        "symfony/http-kernel": "^2.7 || ^3.0 || ^4.0",
-        "symfony/config": "^2.7 || ^3.0 || ^4.0",
-        "symfony/dependency-injection": "^2.7 || ^3.0 || ^4.0",
+        "symfony/http-kernel": "^2.7 || ^3.0 || ^4.0 || ^5.0",
+        "symfony/config": "^2.7 || ^3.0 || ^4.0 || ^5.0",
+        "symfony/dependency-injection": "^2.7 || ^3.0 || ^4.0 || ^5.0",
         "mapado/rest-client-sdk": "^0.33"
     },
     "require-dev": {
