--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "symfony/http-kernel": "^2.7 || ^3.0 || ^4.0 || ^5.0",
         "symfony/config": "^2.7 || ^3.0 || ^4.0 || ^5.0",
         "symfony/dependency-injection": "^2.7 || ^3.0 || ^4.0 || ^5.0",
-        "mapado/rest-client-sdk": "^0.33 || ^0.34"
+        "mapado/rest-client-sdk": "^0.33 || ^0.34 || ^0.35"
     },
     "require-dev": {
         "atoum/atoum": "@stable",
